Fix Rename/Account Details title alignment

--- a/app/style/AccountRow.less
+++ b/app/style/AccountRow.less
@@ -128,15 +128,16 @@
 .account-row-details-bottom-title-name {
   margin-bottom: 0.5em;
   color: #596d81;
-  text-align: right;
 }
 
 .account-row-details-bottom-column-left .account-row-details-bottom-title-name {
   width: 55%;
+  text-align: right;
 }
 
 .account-row-details-bottom-column-right .account-row-details-bottom-title-name {
   width: 26%;
+  text-align: right;
 }
 
 .account-row-details-bottom-spec {
